--- a/src/interfaz/JugarMemory.form
+++ b/src/interfaz/JugarMemory.form
@@ -121,14 +121,14 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel2">
+        <Component class="javax.swing.JLabel" name="muestroPuntaje">
           <Properties>
             <Property name="text" type="java.lang.String" value="------"/>
             <Property name="verticalAlignment" type="int" value="1"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="490" y="10" width="50" height="20"/>
+              <AbsoluteConstraints x="490" y="10" width="50" height="30"/>
             </Constraint>
           </Constraints>
         </Component>
